--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
 <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
 <script type="text/babel">
     const root = document.getElementById("root");
-    const Title = (
-        <h3 id="title" onMouseEnter={() => console.log("im clicked")}>
+    const Title = () =>(
+        <h3 id="title" onMouseEnter={() => console.log("hello")}>
             hello
         </h3>
         );
-    const Button =(
+    const Button = () => (
         <button 
             style={{
                 backgroundColor: "tomato"
@@ -26,7 +26,12 @@
     // const btn = React.createElement("button", {
     //     onClick: () => console.log("im clicked"),
     // }, "Click me")
-    const container = React.createElement("div", null, [Title, Button])
-    ReactDOM.render(container, root);
+    const Container = () => (
+        <div>
+            <Title />
+            <Button />
+        </div>
+        );
+    ReactDOM.render(<Container />, root);
 </script>
 </html>
