--- a/index_converter.html
+++ b/index_converter.html
@@ -8,44 +8,101 @@
 <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
 <script type="text/babel">
     const root = document.getElementById("root");
-    function App() {
+    function MinutesToHours() {
         const [amount, setAmount] = React.useState();
-        const [flipped, setFlipped] = React.useState(false);
+        const [inverted, setInverted] = React.useState(false);
         const onChange = (event) => {
             setAmount(event.target.value);
         }
         const reset = () => setAmount(0);
         const onFlip = () => {
             reset();
-            setFlipped((current) => !current);
+            setInverted((current) => !current);
         }
         return (
             <div> 
-                <h1>Super Converter</h1>
                 <div>
                     <label htmlFor="minutes">Minutes</label>
                     <input 
-                        value={flipped ? amount * 60 : amount} 
+                        value={inverted ? amount * 60 : amount} 
                         id="minutes" 
                         placeholder="Minutes" 
                         type="number" 
                         onChange={onChange}
-                        disabled={flipped}
+                        disabled={inverted}
                     />
                 </div>
                 <div>
                     <label htmlFor="hours">Hours</label>
                     <input 
-                        value={flipped ? amount : Math.round(amount / 60)} 
+                        value={inverted ? amount : Math.round(amount / 60)} 
                         id="hours" 
                         placeholder="Hours" 
                         type="number" 
                         onChange={onChange}
-                        disabled={!flipped}
+                        disabled={!inverted}
                     />
                 </div>
                 <button onClick={reset}>Reset</button>
-                <button onClick={onFlip}>Flip</button>
+                <button onClick={onFlip}>{inverted ? 'Turn Back' : 'Invert'}</button>
+            </div>
+        ); 
+    } 
+    function KmToMiles() {
+        const [amount, setAmount] = React.useState();
+        const [inverted, setInverted] = React.useState(false);
+        const onChange = (event) => {
+            setAmount(event.target.value);
+        }
+        const reset = () => setAmount(0);
+        const onFlip = () => {
+            reset();
+            setInverted((current) => !current);
+        }
+        return (
+            <div> 
+                <div>
+                    <label htmlFor="miles">Miles</label>
+                    <input 
+                        value={inverted ? amount * 1000 : amount} 
+                        id="miles" 
+                        placeholder="Miles" 
+                        type="number" 
+                        onChange={onChange}
+                        disabled={inverted}
+                    />
+                </div>
+                <div>
+                    <label htmlFor="km">Km</label>
+                    <input 
+                        value={inverted ? amount : Math.round(amount / 1000)} 
+                        id="km" 
+                        placeholder="Km" 
+                        type="number" 
+                        onChange={onChange}
+                        disabled={!inverted}
+                    />
+                </div>
+                <button onClick={reset}>Reset</button>
+                <button onClick={onFlip}>{inverted ? 'Turn Back' : 'Invert'}</button>
+            </div>
+        ); 
+    }
+    function App() {
+        const [index, setIndex] = React.useState("0");
+        const onSelect = (event) => {
+            setIndex(event.target.value);
+        }
+        return (
+            <div> 
+                <h1>Super Converter</h1>
+                <select value={index} onChange={onSelect}>
+                 <option value="0">Minutes & Hours</option> 
+                 <option value="1">Km & Miles</option>   
+                </select>
+                <hr />
+                {index === "0" ? <MinutesToHours /> : null}
+                {index === "1" ? <KmToMiles /> : null}
             </div>
         ); 
     } 
