--- a/index_proptype.html
+++ b/index_proptype.html
@@ -8,28 +8,29 @@
 <script src="https://unpkg.com/prop-types@15.7.2/prop-types.js"></script>
 <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
 <script type="text/babel">
-    function Btn({text, changeValue}) {
+    function Btn({text, fontSize = 12}) {
         return <button 
-            onClick={changeValue}
             style={{
                 backgroundColor : "tomato",
                 color : "white",
                 padding : "10px 20px",
                 border : 0,
                 borderRadius : 10,
+                fontSize
             }}
         >
             {text}
         </button>;
     }
-    const MemorizedBtn = React.memo(Btn);
+    Btn.propTypes = {
+        text: PropTypes.string.isRequired,
+        fontSize: PropTypes.number,
+    }
     function App() {
-        const [value, setValue] = React.useState("Save Changes");
-        const changeValue = () => setValue("Revert Changes");
         return (
             <div> 
-                <MemorizedBtn text={value} changeValue={changeValue} />
-                <MemorizedBtn text="Continue" />
+                <Btn text="Continue" fontSize={18}/>
+                <Btn text={"Continue"}/>
             </div>
         ); 
     } 
